// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RENDERING - Tabs > TabLink should render the close button if there is a close action and is active 1`] = `
<Link
  className="Tab___horizontal___lg___active Tab___withClose"
  data-test="tabLink"
  id={null}
  onClick={null}
  to="#"
>
  Test
  <IconButton
    className="Tab_close"
    colorName="blue"
    data-test="closeButton"
    disabled={false}
    icon="close"
    iconClassName={null}
    id={null}
    isLocked={false}
    kind="button"
    onClick={[Function]}
    style={null}
    tabIndex={0}
    type="solid___xs"
  />
</Link>
`;

exports[`RENDERING - Tabs > TabLink should render the locked state if locked 1`] = `
<span
  className="Tab_linkWrapper"
>
  <Tooltip
    className={null}
    content="This is a premium feature. Click the lock icon to learn more"
    placement="bottom"
  >
    <a
      rel="noreferrer"
      target="_blank"
    >
      <Icon
        className="Tab_lockedIcon"
        icon="lock"
        id={null}
        isPulsating={false}
        style={null}
      />
    </a>
  </Tooltip>
  <Link
    className="Tab___horizontal___lg___active Tab___withClose Tab___locked"
    data-test="tabLink"
    id={null}
    onClick={[Function]}
    to="#"
  >
    Test
    <IconButton
      className="Tab_close"
      colorName="blue"
      data-test="closeButton"
      disabled={false}
      icon="close"
      iconClassName={null}
      id={null}
      isLocked={false}
      kind="button"
      onClick={[Function]}
      style={null}
      tabIndex={0}
      type="solid___xs"
    />
  </Link>
</span>
`;

exports[`RENDERING - Tabs > TabLink should render the unlocked state if locked 1`] = `
<Link
  className="Tab___horizontal___lg___active Tab___withClose"
  data-test="tabLink"
  id={null}
  onClick={null}
  to="#"
>
  Test
  <IconButton
    className="Tab_close"
    colorName="blue"
    data-test="closeButton"
    disabled={false}
    icon="close"
    iconClassName={null}
    id={null}
    isLocked={false}
    kind="button"
    onClick={[Function]}
    style={null}
    tabIndex={0}
    type="solid___xs"
  />
</Link>
`;

exports[`RENDERING - Tabs > TabLink should render with default props 1`] = `
<Link
  className="Tab___horizontal___lg"
  data-test="tabLink"
  id={null}
  onClick={null}
  to="#"
>
  Test
</Link>
`;
